@@ -25,7 +25,8 @@ Release 1.1 (in development)
 
 * #526: Added Iranian translation.
 
-* #559: Added :confval:`html_permalink_text`.
+* #559: :confval:`html_add_permalinks` is now a string giving the
+  text to display in permalinks.
 
 
 Release 1.0.6 (in development)
